feat: doc for auth
